increasing encapsulation in customer-service and product-service